tests/functional/lang/parse-fail/unexpected-if.err.exp
error: syntax error, unexpected 'if', expecting identifier or 'or' or '${' or '"'
       at «stdin»:1:3:
            1| a.if
             |   ^
            2|
